<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="btnt">Hit Me</string>
	<string name="entertext">Enter Text</string>
	<string name="pro1t">Pro 1</string>
	<string name="pro2t">Pro 2</string>
	<string name="pro3t">Pro 3</string>
	<string name="pro4t">Pro 4</string>
	<string name="pro5t">Pro 5</string>
	<string name="enteremail">Enter E-mail</string>
	<string name="enterpass">Enter Password</string>
	<string name="text">Text</string>
	<string name="lgn">Login</string>
	<string name="cnl">Cancel</string>
	<string name="wlc">Welcome</string>
</resources>
