<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#999"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText android:id="@+id/ttotv"
        	android:layout_marginTop="20sp"
        	android:layout_width="match_parent"
        	android:hint="@string/entertext"
        	android:textColor="#fff"
        	android:textAlignment="center"
        	android:layout_height="wrap_content"/>
	<Button android:id="@+id/tvbtn"
	    	android:layout_marginTop="30sp"
	    	android:layout_width="wrap_content"
	    	android:text="@string/btnt"
	    	android:textColor="#fff"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"/>

	<TextView
	    android:id="@+id/tv"
	    android:layout_marginTop="50sp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#fff"
	    android:gravity="center"
	    android:text="@string/app_name" />

</LinearLayout>
